--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             // --- 3단계: 여기에 2단계에서 복사한 웹 앱 URL을 붙여넣으세요! ---
             const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyHHERaOcjnwfYOm8oFqHbY4EVqaZmKpvyIquT4raRvonGx3vgY0LZ6UzrfkSpMGhPXhg/exec';
 
-            if (SCRIPT_URL === 'https://script.google.com/macros/s/AKfycbyHHERaOcjnwfYOm8oFqHbY4EVqaZmKpvyIquT4raRvonGx3vgY0LZ6UzrfkSpMGhPXhg/exec') {
+            if (SCRIPT_URL === '여기에_배포된_스크립트_URL을_붙여넣으세요') {
                 titleEl.textContent = '탐험 완료! (저장 설정 필요)';
                 storyEl.textContent = '결과를 저장하기 위한 구글 앱 스크립트 URL 설정이 필요합니다.';
                 return;
@@ -343,5 +343,6 @@
     </script>
 </body>
 </html>
+
 
 
